# onping-permissions

./: onping-permissions.cabal
apps/: config.yml
apps/opp-graphviz-app/: README.md  addsources.sh  opp-graphviz-app.cabal
apps/opp-graphviz-app/main/: Main.hs
apps/opp-graphviz-app/src/: Permissions.hs
apps/opp-graphviz-app/src/Permissions/: Internal.hs
apps/opp-graphviz-app/test/: PermissionsSpec.hs
core-libs/onping-permissions-core/: README.md  changelog.md  onping-permissions-core.cabal
core-libs/onping-permissions-core/src/Permissions/Onping/: Graph.hs
core-libs/onping-permissions-core/src/Permissions/Onping/Graph/: Internal.hs
core-libs/onping-permissions-core/test/Permissions/Onping/: GraphSpec.hs
core-types/onping-permission-types/: README.md  onping-permission-types.cabal
core-types/onping-permission-types/src/Permissions/Onping/: Types.hs
core-types/onping-permission-types/src/Permissions/Onping/Types/: Internal.hs
core-types/onping-permission-types/test/Permissions/Onping/: TypesSpec.hs
opts-libs/onping-permissions-diagram/: README.md  onping-permissions-diagram.cabal
opts-libs/onping-permissions-diagram/src/Permissions/Onping/: DiagramWriter.hs
opts-libs/onping-permissions-diagram/src/Permissions/Onping/DiagramWriter/: Internal.hs
opts-libs/onping-permissions-diagram/test/Permissions/Onping/: DiagramWriterSpec.hs
opts-libs/onping-permissions-graphviz/: README.md  changelog.md  onping-permissions-graphviz.cabal
opts-libs/onping-permissions-graphviz/src/Permissions/Onping/: GraphVizWriter.hs
opts-libs/onping-permissions-graphviz/src/Permissions/Onping/GraphVizWriter/: Internal.hs
opts-libs/onping-permissions-graphviz/test/Permissions/Onping/: GraphVizWriterSpec.hs
src/Permissions/Onping/: DiagramWriter.hs  Graph.hs  GraphVizWriter.hs  Internal.hs
test/Permissions/Onping/: GraphSpec.hs  InternalSpec.hs
