Name:                   opp-graphviz-app
Version:                0.0.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Permissions
  Other-Modules:        Permissions.Internal
  Build-Depends:        base >= 4 && < 5
                      , onping-permission-types == 0.1.0
                      , onping-permissions-core  == 0.1.1
                      , onping-permissions-graphviz == 0.1.0 

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Executable oppg 
  main-is:            Main.hs
  HS-Source-Dirs:     main
                    , opp-graphviz-app
  ghc-options:       -threaded -O2 -rtsopts -Wall                   

Source-Repository head
  Type:                 git
--  Location:             
