Name:                   onping-permissions-core
Version:                0.1.3
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Permissions.Onping.Graph
  Other-Modules:        Permissions.Onping.Graph.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers == 0.5.0.0
                      , aeson == 0.7.0.1
                      , fgl == 5.4.2.4
                      , persist-mongo-template >= 0.3.3
                      , time == 1.4.1
                      , structured-script-lang == 0.1.4
                      , onping-permission-types == 0.1.0
                      , persistent == 1.3.0.2
                      , text == 0.11.3.1

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
