Name:                   onping-permission-types
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Permissions.Onping.Types
  Other-Modules:        Permissions.Onping.Types.Internal
  Build-Depends:        base >= 4 && < 5
                       ,containers == 0.5.0.0
                       ,bytestring == 0.10.0.2
                       ,fgl == 5.4.2.4
                       ,aeson 
                       ,persistent == 1.3.0.2
                       ,persist-mongo-template >= 0.3.3

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
